--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "dhg test",
     "build": "rimraf ./build && tsc",
-    "start": "node build/index.js"
+    "register": "node ./build/register-commands.js",
+    "start": "node ./build/index.js"
   },
   "author": "R3DStylum",
   "license": "ISC",
